--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -14,12 +14,12 @@ repositories {
 mainClassName = "uk.os.wdtinc.demo.Main"
 
 dependencies {
+    compile project(':mapbox-vector-tile-java')
 
     compile 'org.xerial:sqlite-jdbc:3.8.11.2'
     compile 'com.google.guava:guava:19.0'
     compile 'io.reactivex:rxjava:1.1.7'
     compile 'com.github.davidmoten:rxjava-jdbc:0.7.2'
-    compile 'com.wdtinc:mapbox-vector-tile:1.0'
     compile 'org.slf4j:slf4j-simple:1.7.21'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
